Non-unified build fixes, early November 2021 edition take two https://bugs.webkit.org/show_bug.cgi?id=232801

Unreviewed non-unified build fixes.


* Modules/WebGPU/GPUColorWrite.h:
* Modules/WebGPU/GPUSupportedLimits.h:
* Modules/WebGPU/GPUValidationError.h:
* css/parser/CSSParserIdioms.h:



Canonical link: https://commits.webkit.org/243953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285396 268f45cc-cd09-0410-ab3c-d52691b4dbfc