Source/WebCore/Modules/WebGPU/GPUColorWrite.h
@@ -29,6 +29,7 @@
 #include "GPUBlendOperation.h"
 #include "GPUIntegralTypes.h"
 #include <cstdint>
+#include <wtf/RefCounted.h>
 
 namespace WebCore {
 
