Source/WebCore/Modules/WebGPU/GPUSupportedLimits.h
@@ -26,6 +26,7 @@
 #pragma once
 
 #include <cstdint>
+#include <wtf/Ref.h>
 #include <wtf/RefCounted.h>
 
 namespace WebCore {
