Source/WebCore/Modules/WebGPU/GPUValidationError.h
@@ -27,6 +27,7 @@
 
 #include <wtf/Ref.h>
 #include <wtf/RefCounted.h>
+#include <wtf/text/WTFString.h>
 
 namespace WebCore {
 
